fix(credite): add column deleted_at
- fix api CalcBalanceUser (ignore direct fulfillment)
- delete unused apis: shop.Summary/CalcBalanceShop, shop.Account/GetBalanceShop

Reviewed-on: https://g.meta.etop.vn/c/etop/backend/+/3177
Tested-by: eTop Bot
